fix: dont overlap textarea input and action buttons

--- a/src/components/KymaCompanion/components/Chat/Input/QueryInput.scss
+++ b/src/components/KymaCompanion/components/Chat/Input/QueryInput.scss
@@ -1,24 +1,34 @@
 .chat-container {
-  .outer-input-container {
+  .outer-query-input-container {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
 
-    .input-container {
+    .query-input-container {
       position: relative;
-
       --_ui5-v2-11-0_textarea_padding_top: 8px !important;
       --_ui5-v2-11-0_textarea_padding_bottom: 8px !important;
 
-      #text-area-icon {
+      .query-input-actions {
         position: absolute;
         right: 0.5rem;
         bottom: 0.5rem;
-        min-height: 1.75rem;
-        height: 1.75rem;
-        min-width: 1.75rem;
-        width: 1.75rem;
-        border-radius: 50%;
+
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+
+        #cancel-icon-hidden {
+          display: none;
+        }
+
+        #submit-icon {
+          min-height: 1.75rem;
+          height: 1.75rem;
+          min-width: 1.75rem;
+          width: 1.75rem;
+          border-radius: 50%;
+        }
       }
     }
 
